removed the white space on the top in the intro, find another way to create the correct spacing

--- a/style.css
+++ b/style.css
@@ -84,7 +84,6 @@
   display :flex;
   align-items :center;
   justify-content : center;
-  margin-top : 50px;
   font-size : 100px;
 }
 
@@ -123,6 +122,9 @@
 	animation: gradient 10s ease infinite;
 }
 
+.Body {
+  height:100vh;
+}
 /* removing scrollbar */
 
 html {
